fixed z index (small change but fixed layout issues)

--- a/major_triads_styles.css
+++ b/major_triads_styles.css
@@ -17,6 +17,7 @@ body {
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 20;
 }
 
 .header .logo {
@@ -46,7 +47,7 @@ body {
   position: fixed;
   width: 100%;
   top: 200px;
-  z-index: 5;
+  z-index: 10;
   margin-top: -10px;
 }
 
@@ -372,12 +373,10 @@ h2:hover {
   margin-right: 200px;
   margin-top: 48rem;
 }
-
 .container:hover {
   transform: translateY(-10px) scale(1.02);
   box-shadow: 0 20px 40px rgba(0, 0, 0, 10);
 }
-
 .buttons {
   display: flex;
   flex-direction: column;
